Fix code block text rendering larger on iOS
- Configure PostCSS to prefix text-size-adjust and others

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -28,6 +28,7 @@ html {
 	height: 100%;
 	background-color: var(--c-background);
 	color: var(--c-foreground);
+	text-size-adjust: none;
 }
 body {
 	display: flex;
